--- a/src/cadastro_menu_login/View/homescreen.html
+++ b/src/cadastro_menu_login/View/homescreen.html
@@ -23,7 +23,7 @@
   <!-- vídeo de fundo -->
   <div class="background-video" aria-hidden="true">
     <video autoplay loop muted playsinline>
-      <source src="fundo_da_tela.mp4" type="video/mp4" />
+      <source src="../../../public/img/fundo_da_tela.mp4" type="video/mp4" />
       Seu navegador não suporta reprodução de vídeo.
     </video>
   </div>
@@ -47,6 +47,6 @@
     <div class="website-link" id="websiteLink">www.MarcelaSHOW.com</div>
   </main>
 
-  <script src="app.js"></script>
+  <script src="../../../public/script/app.js"></script>
 </body>
 </html>
