--- a/src/cadastro_menu_login/View/menu.html
+++ b/src/cadastro_menu_login/View/menu.html
@@ -22,8 +22,8 @@
   <!-- vídeo de fundo -->
   <div class="background-video" aria-hidden="true">
     <video autoplay loop muted playsinline>
-      <source src="fundo_da_tela.mp4" type="video/mp4" />
-      Seu navegador não suporta reprodução de vídeo.
+        <source src="../../../public/img/fundo_da_tela.mp4" type="video/mp4" />
+        Seu navegador não suporta reprodução de vídeo.
     </video>
   </div>
 
@@ -88,6 +88,6 @@
     </div>
   </main>
 
-  <script src="app.js"></script>
+  <script src="../../../public/script/app.js"></script>
 </body>
 </html>
