--- a/src/arvore/View/arvore.html
+++ b/src/arvore/View/arvore.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="origens.html">Origens</a>
+    <a href="../../origens/View/origens.html">Origens</a>
 </body>
 </html>
