--- a/src/cadastro_menu_login/View/cadastro.html
+++ b/src/cadastro_menu_login/View/cadastro.html
@@ -60,50 +60,31 @@
         <!-- Inputs apenas visuais (sem submissão real) -->
         <div class="row">
           <label>Nome completo</label>
-<<<<<<< HEAD
           <input type="text" name="nome" placeholder="Seu nome completo"  readonly value={nome}/>
-=======
           <input type="text" name="nome" placeholder="Seu nome completo" readonly value={nome}/>
->>>>>>> 9ce0c4e31809be1e9777d4ec9ed31a5c5fdcbf79
         </div>
 
         <div class="row two-cols">
           <div>
             <label>E-mail</label>
-<<<<<<< HEAD
             <input type="email" name="email" placeholder="exemplo@dominio.com" readonly value="{email}" />
-=======
-            <input type="email" name="email" placeholder="exemplo@dominio.com" readonly value={email}/>
->>>>>>> 9ce0c4e31809be1e9777d4ec9ed31a5c5fdcbf79
           </div>
 
           <div>
             <label>Telefone</label>
-<<<<<<< HEAD
             <input type="tel" name="telefone" placeholder="(xx) xxxxx-xxxx" readonly value="{telefone}" />
-=======
-            <input type="tel" name="telefone" placeholder="(xx) xxxxx-xxxx" readonly value={telefone}"/>
->>>>>>> 9ce0c4e31809be1e9777d4ec9ed31a5c5fdcbf79
           </div>
         </div>
 
         <div class="row two-cols">
           <div>
             <label>Senha</label>
-<<<<<<< HEAD
             <input type="password" name="senha" placeholder="Mínimo 6 caracteres" readonly value="{senha}" />
-=======
-            <input type="password" name="senha" placeholder="Mínimo 6 caracteres" readonly value={senha} />
->>>>>>> 9ce0c4e31809be1e9777d4ec9ed31a5c5fdcbf79
           </div>
 
           <div>
             <label>Confirmar senha</label>
-<<<<<<< HEAD
-            <input type="password" name="confirm" placeholder="Repita a senha" readonly value="confirm" />
-=======
-            <input type="password" name="confirmar" placeholder="Repita a senha" readonly value={confirmar} />
->>>>>>> 9ce0c4e31809be1e9777d4ec9ed31a5c5fdcbf79
+            <input type="password" name="confirm" placeholder="Repita a senha" readonly value="{confirm}" />
           </div>
         </div>
 
