--- a/src/cadastro_menu_login/View/contato.html
+++ b/src/cadastro_menu_login/View/contato.html
@@ -16,7 +16,7 @@
     <nav class="nav-inner" id="navInner">
       <a href="sobre.html" class="nav-link">Sobre</a>
       <a href="objetivo.html" class="nav-link">Objetivo</a>
-      <a href="contato.html" class="nav-link">Contato</a>
+      <a href="homescreen.html" class="nav-link">Home</a>
     </nav>
   </header>
 
