--- a/src/cadastro_menu_login/View/objetivo.html
+++ b/src/cadastro_menu_login/View/objetivo.html
@@ -15,7 +15,7 @@
   <header class="topbar" id="topbar" role="navigation" aria-label="Navegação principal">
     <nav class="nav-inner" id="navInner">
       <a href="sobre.html" class="nav-link">Sobre</a>
-      <a href="objetivo.html" class="nav-link">Objetivo</a>
+      <a href="homescreen.html" class="nav-link">Home</a>
       <a href="contato.html" class="nav-link">Contato</a>
     </nav>
   </header>
