--- a/src/cadastro_menu_login/View/cadastro.html
+++ b/src/cadastro_menu_login/View/cadastro.html
@@ -13,9 +13,9 @@
   <!-- Top navigation bar (será ocultado pelo JS) -->
   <header class="topbar" id="topbar" role="navigation" aria-label="Navegação principal">
     <nav class="nav-inner" id="navInner">
-      <a href="homescreen.html" class="nav-link">Sobre</a>
-      <a href="homescreen.html" class="nav-link">Objetivo</a>
-      <a href="homescreen.html" class="nav-link">Contato</a>
+      <a href="sobre.html" class="nav-link">Sobre</a>
+      <a href="objetivo.html" class="nav-link">Objetivo</a>
+      <a href="contato.html" class="nav-link">Contato</a>
     </nav>
   </header>
 
