--- a/src/app/View/doenca.html
+++ b/src/app/View/doenca.html
@@ -14,5 +14,7 @@
 
         <input type="submit" value="Calcular">
     </form>
+    <br>
+    <a href="cadastro_doenca.html">Cadastrar Nova Doença</a>
 </body>
 </html>
