--- a/src/cadastro_menu_login/View/menu.html
+++ b/src/cadastro_menu_login/View/menu.html
@@ -63,7 +63,7 @@
           </div>
         </a>
 
-        <a class="module-card" href="arvore.html" aria-label="Árvore genealógica">
+        <a class="module-card" href="../../arvore/View/arvore.html" aria-label="Árvore genealógica">
           <div class="mc-title">Árvore genealógica</div>
           <div class="mc-desc">Template para integrar a visualização e edição de árvores.</div>
           <div class="mc-meta">
@@ -94,6 +94,8 @@
             <span class="badge dev">Em dev</span>
           </div>
         </a>
+
+        
 
         <!-- Create new module CTA -->
         <a class="module-card module-create" href="novo-modulo.html" aria-label="Criar novo módulo">
