--- a/src/arvore/View/form.html
+++ b/src/arvore/View/form.html
@@ -110,7 +110,6 @@
                     <option value="Inglaterra">Inglaterra</option>
                     <option value="Irlanda">Irlanda</option>
                     <option value="Islândia">Islândia</option>
-                    <option value="Israel">Israel</option>
                     <option value="Itália">Itália</option>
                     <option value="Jamaica">Jamaica</option>
                     <option value="Japão">Japão</option>
@@ -125,6 +124,7 @@
                     <option value="Moçambique">Moçambique</option>
                     <option value="Noruega">Noruega</option>
                     <option value="Nova Zelândia">Nova Zelândia</option>
+                    <option value="Palestina">Palestina</option>
                     <option value="Panamá">Panamá</option>
                     <option value="Paraguai">Paraguai</option>
                     <option value="Peru">Peru</option>
@@ -133,6 +133,7 @@
                     <option value="Quênia">Quênia</option>
                     <option value="Reino Unido">Reino Unido</option>
                     <option value="República Dominicana">República Dominicana</option>
+                    <option value="Rojava">Rojava</option>
                     <option value="Romênia">Romênia</option>
                     <option value="Rússia">Rússia</option>
                     <option value="Senegal">Senegal</option>
@@ -147,6 +148,7 @@
                     <option value="Uruguai">Uruguai</option>
                     <option value="Venezuela">Venezuela</option>
                     <option value="Vietnã">Vietnã</option>
+                    <option value="Zapatistas">Zapatistas</option>
                 </select>
             </div>
             
@@ -209,7 +211,7 @@
           </div>
 
           <div class="form-actions">
-            <a class="btn ghost" href="homescreen.html">Voltar</a>
+            <a class="btn ghost" href="index.php">Voltar</a>
             <button type="submit" class="btn primary">Cadastrar</button>
           </div>
         </form>
