--- a/src/arvore/View/topnavigationfundo.html
+++ b/src/arvore/View/topnavigationfundo.html
@@ -1,6 +1,6 @@
   <!-- Top navigation bar -->
   <header class="topbar" id="topbar" role="navigation" aria-label="Navegação principal">
-    <nav class="nav-inner" id="navInner">
+    <nav class="nav-inner" id="navInner" style="color: aliceblue;">
       <a href="homescreen.html" class="nav-link">Sobre</a>
       <a href="homescreen.html" class="nav-link">Objetivo</a>
       <a href="homescreen.html" class="nav-link">Contato</a>
