--- a/src/app/View/cadastro_doenca.html
+++ b/src/app/View/cadastro_doenca.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Cadastrar Nova Doença</h1>
-    <form action="#" method="post">
+    <form action="../Model/doenca.class.php" method="post">
         <label for="nomeDoenca">Nome da Doença:</label>
         <input type="text" id="nomeDoenca" name="nomeDoenca" required>
         <button type="submit">Cadastrar</button>
