Att, pasta doenca

--- a/src/cadastro_menu_login/View/menu.html
+++ b/src/cadastro_menu_login/View/menu.html
@@ -63,7 +63,7 @@
           </div>
         </a>
 
-        <a class="module-card" href="arvore.html" aria-label="Árvore genealógica">
+        <a class="module-card" href="../../arvore/View/arvore.html" aria-label="Árvore genealógica">
           <div class="mc-title">Árvore genealógica</div>
           <div class="mc-desc">Template para integrar a visualização e edição de árvores.</div>
           <div class="mc-meta">
@@ -79,7 +79,7 @@
           </div>
         </a>
 
-        <a class="module-card" href="../../app/View/doenca.html" aria-label="Cálculo cor dos olhos">
+        <a class="module-card" href="../../doencas/View/doenca.html" aria-label="Cálculo cor dos olhos">
           <div class="mc-title">Cálculo para probabilidade de doenças</div>
           <div class="mc-desc">Espaço para implementar o cálculo probabilístico dos fenótipos.</div>
           <div class="mc-meta">
