atualização uso do banco de dados

--- a/src/cadastro_menu_login/View/menu.html
+++ b/src/cadastro_menu_login/View/menu.html
@@ -79,7 +79,7 @@
           </div>
         </a>
 
-        <a class="module-card" href="../../app/View/tipoSanquineo.php" aria-label="Calculadora de Tipo Sanguíneo">
+        <a class="module-card" href="../../app/Control/controle_TipoSanguineo.php" aria-label="Calculadora de Tipo Sanguíneo">
           <div class="mc-title">Calculadora de Tipo Sanguíneo</div>
           <div class="mc-desc">Calcule o tipo sanguíneo do seu filho.</div>
           <div class="mc-meta">
