--- a/src/cadastro_menu_login/View/menu.html
+++ b/src/cadastro_menu_login/View/menu.html
@@ -105,8 +105,11 @@
 
         <!-- Create new module CTA -->
         <a class="module-card module-create" href="novo-modulo.html" aria-label="Criar novo módulo">
-          <div style="font-size:22px;">＋</div>
-          <div>Criar novo módulo</div>
+          <div style="font-size:22px;">Galeria</div>
+          <div>Registro de características hereditarias.</div>
+          <div class="mc-meta">
+            <span class="badge dev">em dev</span> 
+          </div>
         </a>
       </nav>
     </div>
