--- a/src/cadastro_menu_login/View/homescreen.html
+++ b/src/cadastro_menu_login/View/homescreen.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Marcela — Home</title>
+  <title>BioLineage — Home</title>
 
   <!-- Fonte -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -34,7 +34,7 @@
   <!-- HERO -->
   <main class="hero-screen" role="main">
     <div class="hero">
-      <h1 class="title">Marcela</h1>
+      <h1 class="title">BioLineage</h1>
       <p class="subtitle">
         Plataforma de pesquisa em genética,<br />
         simulação genética e árvore genealógica digital
@@ -44,7 +44,7 @@
       <a class="enter-button" href="cadastro.html" id="enterBtn">Entrar</a>
     </div>
 
-    <div class="website-link" id="websiteLink">www.MarcelaSHOW.com</div>
+    <div class="website-link" id="websiteLink">www.BioLineage.com</div>
   </main>
 
   <script src="../../../public/script/app.js"></script>
