--- a/src/cadastro_menu_login/View/homescreen.html
+++ b/src/cadastro_menu_login/View/homescreen.html
@@ -41,7 +41,7 @@
       </p>
 
       <!-- leva para a página de cadastro -->
-      <a class="enter-button" href="cadastro.html" id="enterBtn">Entrar</a>
+      <a class="enter-button" href="cadastro.php" id="enterBtn">Entrar</a>
     </div>
 
     <div class="website-link" id="websiteLink">www.BioLineage.com</div>
